--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -159,3 +159,7 @@ button:focus {
 .MuiDialogActions-root {
     padding: 8px 24px !important;
 }
+
+.search-area-action button {
+    margin-right: 5px;
+}
