--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -79,17 +79,17 @@ label {
     z-index: 100;
 }
 
-/* ::-webkit-scrollbar {
-    height: 0px;
+::-webkit-scrollbar {
+    height: 5px;
     width: 5px;
     background: #0000002e;
     border-radius: 100px;
 }
 
 ::-webkit-scrollbar-button {
-    height: 0px;
+    height: 5px;
     width: 5px;
-} */
+}
 
 ::-webkit-scrollbar-thumb {
     background-clip: padding-box;
@@ -182,6 +182,6 @@ button:focus {
     border-top: 1px solid #dfdfdf;
 }
 .MuiInputBase-root.MuiOutlinedInput-root.Mui-disabled.Mui-disabled.MuiOutlinedInput-marginDense {
-    background: #dfdfdf94;
-    color: rgb(0 0 0 / 73%)
+    background: #f5f5f5;
+    color: #00000040;
 }
