--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -108,6 +108,10 @@ table td {
     padding: 0px 8px !important;
 }
 
+table .table-row-p8 td {
+    padding: 8px !important;
+}
+
 .listSubHeader {
     background: #eee !important;
     height: 38px;
