--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -204,3 +204,19 @@ thead.MuiTableHead-root {
 .MuiChip-deleteIconSmall{
     color: #fff !important;
 }
+
+.button-loading .MuiButton-iconSizeSmall {
+    animation-name: spin;
+    animation-duration: 5000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear; 
+}
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
