--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -254,7 +254,7 @@ td.MuiTableCell-root.MuiTableCell-body button {
 }
 
 .MuiTableRow-root.MuiTableRow-hover:hover {
-    background-color: rgb(0 0 0 / 15%);
+    background-color: rgb(0 0 0 / 15%) !important;
 }
 
 @keyframes spin {
