--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -273,6 +273,75 @@ note {
     font-size: 13px;
 }
 
+.submenu-link:hover, .sub-active {
+    color: var(--primary) !important;
+    background-color: #373e4c !important;
+    border-radius: 5px !important;
+}
+
+.MuiTooltip-popper.MuiTooltip-popperInteractive .MuiTooltip-tooltip.MuiTooltip-tooltipPlacementRight {
+    margin: auto;
+    background-color: #1b1f26;
+}
+
+.MuiTooltip-popper.MuiTooltip-popperInteractive span.MuiTooltip-arrow::before {
+    background-color: #1b1f26;
+}
+
+#menu_view a b:nth-child(1) {
+    position: absolute;
+    top: -5px;
+    right: 0px;
+    height: 10px;
+    width: 10%;
+    background: #1b1f26;
+    display: none;
+}
+
+#menu_view a b:nth-child(1)::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-bottom-right-radius: 6px;
+    background-color: #373e4c;
+}
+
+#menu_view a b:nth-child(2) {
+    position: absolute;
+    bottom: -5px;
+    right: 0px;
+    height: 10px;
+    width: 10%;
+    background: #1b1f26;
+    display: none;
+}
+
+#menu_view a b:nth-child(2)::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-top-right-radius: 6px;
+    background-color: #373e4c;
+}
+
+#menu_view div.menu-item {
+    position: relative;
+}
+
+#menu_view a:hover b:nth-child(1), #menu_view a:hover b:nth-child(2) {
+    display: block;
+}
+
+.MuiListItemIcon-root {
+    min-width: auto !important;
+    color: #fff !important;
+}
+
 @keyframes spin {
     from {
         transform:rotate(0deg);
